--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -2,6 +2,8 @@
 
 .header {
     .header__title {
+        margin-top: 4vh;
+        margin-bottom: 4vh;
         font-size: 4vw;
         text-align: center;
         font-weight: 700;
