--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -21,4 +21,53 @@
         background-color: colors.$darkPurple;
         color: colors.$lightYellow;
     }
+
+    .button__spinner {
+        width: 6%;
+    }
 }
+
+.modal {
+    display: block;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(colors.$black, 0.8);
+    
+    .modal__content {
+        margin-left: 37vw;
+        margin-top: 30vh;
+        padding: 1vw;
+        background-color: colors.$lightYellow;
+        width: 26vw;
+        height: 20vh;
+
+        .modal__content__text {
+            width: 60%;
+            margin-top: 7vh;
+            margin-left: auto;
+            margin-right: auto;
+            color: colors.$purple;
+            font-size: 1.5vw;
+            font-weight: 600;
+            text-align: center;
+        }
+
+        .modal__content__close {
+            color: colors.$purple;
+            float: right;
+            font-size: 3vw;
+            font-weight: bold;
+            cursor: pointer;
+    
+            &:hover {
+                color: colors.$lightPurple;
+            }
+        }
+    }
+
+}
+
