--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -71,3 +71,46 @@
 
 }
 
+@media only screen and (max-width: 767px) {
+
+    .button {
+        margin-top: 4vh;
+        margin-bottom: 6vh;
+        padding: 2vw;
+        width: 82%;
+        border: 0.4vw solid colors.$lightYellow;
+        font-size: 5vw;
+    
+        .button__spinner {
+            width: 8%;
+            margin-left: 2vw;
+        }
+    }
+    
+    .modal {
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        
+        .modal__content {
+            margin-left: 25vw;
+            margin-top: 30vh;
+            padding: 4vw;
+            width: 50vw;
+            height: 20vh;
+    
+            .modal__content__text {
+                width: 80%;
+                margin-top: 7vh;
+                font-size: 6vw;
+            }
+    
+            .modal__content__close {
+                font-size: 10vw;
+            }
+        }
+    
+    }
+
+}
