--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -16,3 +16,15 @@
         }
     }
 }
+
+@media only screen and (max-width: 767px) {
+
+    .header {
+        .header__title {
+            margin-top: 5vh;
+            margin-bottom: 5vh;
+            font-size: 12.5vw;
+        }
+    }
+
+}
